--- a/inventory/uat.yaml
+++ b/inventory/uat.yaml
@@ -1,3 +1,3 @@
 [uat-webservers]
-172.31.34.104 ansible_ssh_user='ec2-user'
-172.31.47.40 ansible_ssh_user='ec2-user'
+172.31.34.104 ansible_ssh_user=ec2-user
+172.31.47.40 ansible_ssh_user=ec2-user
