--- a/playbooks/site.yaml
+++ b/playbooks/site.yaml
@@ -2,13 +2,16 @@
 - hosts: all
 - name: Include dynamic variables 
   tasks:
-  import_playbook: ../static-assignments/common.yml 
-  include: ../dynamic-assignments/env-vars.yml
+  import_playbook: ../static-assignments/common.yaml 
+  include: ../dynamic-assignments/env-vars.yaml
   tags:
     - always
 
 -  hosts: webservers
 - name: Webserver assignment
-  import_playbook: ../static-assignments/webservers.yml
+  import_playbook: ../static-assignments/webservers.yaml
 
-
+- name: Loadbalancers assignment
+   hosts: lb
+- import_playbook: ../static-assignments/loadbalancers.yaml
+  when: load_balancer_is_required
