--- a/roles/apacheRole/defaults/main.yml
+++ b/roles/apacheRole/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 apache_enablerepo: ""
-
+enable_apache_lb: false
+load_balancer_is_required: false
 apache_listen_ip: "*"
 apache_listen_port: 80
 apache_listen_port_ssl: 443
