--- a/roles/nginxRole/defaults/main.yml
+++ b/roles/nginxRole/defaults/main.yml
@@ -1,7 +1,8 @@
 ---
 # Used only for Debian/Ubuntu installation, as the -t option for apt.
 nginx_default_release: ""
-
+enable_nginx_lb: false
+load_balancer_is_required: false
 # Used only for Redhat installation, enables source Nginx repo.
 nginx_yum_repo_enabled: true
 
